[gd_scene load_steps=4 format=3 uid="uid://dst57avkngwuw"]

[ext_resource type="Script" path="res://scripts/levels/level_infinite.gd" id="1_kutmv"]
[ext_resource type="PackedScene" uid="uid://cs6sy82mme6s4" path="res://scenes/ui/zoomies_ui.tscn" id="2_pkgyb"]
[ext_resource type="Texture2D" uid="uid://dfw1ecbuyggk6" path="res://assets/textures/UI/Arrow.png" id="3_b7cfu"]

[node name="LevelInfinite" type="Node2D"]
script = ExtResource("1_kutmv")

[node name="ZoomiesUI" parent="." instance=ExtResource("2_pkgyb")]
position = Vector2(-957, -533)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UpButton" type="TextureButton" parent="."]
offset_left = 764.367
offset_top = -392.317
offset_right = 911.367
offset_bottom = -276.317
rotation = -4.71238
pivot_offset = Vector2(70.7335, 58.3076)
texture_normal = ExtResource("3_b7cfu")

[node name="DownButton" type="TextureButton" parent="."]
offset_left = 756.0
offset_top = 294.0
offset_right = 903.0
offset_bottom = 410.0
rotation = -1.57079
pivot_offset = Vector2(79, 58)
texture_normal = ExtResource("3_b7cfu")

[connection signal="button_down" from="UpButton" to="." method="_on_up_button_button_down"]
[connection signal="button_up" from="UpButton" to="." method="_on_up_button_button_up"]
[connection signal="button_down" from="DownButton" to="." method="_on_down_button_button_down"]
[connection signal="button_up" from="DownButton" to="." method="_on_down_button_button_up"]
